--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
             if (mode === 'b2c') {
                 modeTitle.textContent = 'Produkt B2C (purlesworld.com)';
                 modeTitle.className = 'mode-title mode-b2c';
-                pageTitle.textContent = 'Generator kodów QR dla Purlesworld - B2C';
-                mainTitle.textContent = 'Generator kodów QR dla Purlesworld - B2C';
+                pageTitle.textContent = 'Generator kodów QR dla purlesworld.com - B2C';
+                mainTitle.textContent = 'Generator kodów QR dla purlesworld.com - B2C';
                 
                 // Zielone przyciski dla B2C
                 allButtons.forEach(btn => {
